Deploy/minikube/sample-deployment.yml
apiVersion: v1
kind: Deployment
  name: sample-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-foo
  template:
    metadata:
      labels:
        app: sample-foo
    spec:
      containers:
      - name: sample-foo
        image: foo:1.0.0
        ports:
        - containerPort: 80
