Deploy/minikube/product-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service-container
        image: ecom-product-api:v0.0.1
        imagePullPolicy: Never
        ports:
        - containerPort: 80

---

kind: Service
apiVersion: v1
metadata:
  name:  product-service
spec:
  selector:
    app:  product-service
  type:  NodePort
  ports:
  - protocol: TCP
    port:  80
    targetPort:  80
    nodePort: 31101
