Deploy/minikube/sample-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
spec:
  type: NodePort
  selector:
    app: sample-foo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
