Deploy/minikube/web-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app-container
        image: ecom-app:v0.0.1
        imagePullPolicy: Never
        ports:
        - containerPort: 80

---

kind: Service
apiVersion: v1
metadata:
  name:  web-app-service
spec:
  selector:
    app:  web-app
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31000
