Deploy/minikube/ingress-sample.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
spec:
  rules:
  - host: "minikube.local"
    http:
      paths:
      - path: /api/product
        pathType: Prefix
        backend: 
          service:
            name: product-service
            port: 
              number: 80
  - host: "minikube.local"
    http:
      paths:
      - path: /api/cart
        pathType: Prefix
        backend:
          service:
            name: cart-service
            port: 
              number: 80
